feat: 业务组件：客户选择器

--- a/packages/cbc/basic/customer-picker/customer-picker.component.html
+++ b/packages/cbc/basic/customer-picker/customer-picker.component.html
@@ -2,10 +2,11 @@
   style="width: 300px;"
   nzShowSearch
   nzAllowClear
-  ngModel
+  [(ngModel)]="value"
   [compareWith]="compareWith"
   (ngModelChange)="onChange($event)"
   [nzDisabled]="coDisabled"
+  [nzLoading]="isLoading"
   [nzPlaceHolder]="coPlaceHolder"
   (nzOnSearch)="coOnSearch.emit($event)"
   (nzScrollToBottom)="coScrollToBottom.emit($event)"
