--- a/packages/cbc/basic/customer-picker/style/index.less
+++ b/packages/cbc/basic/customer-picker/style/index.less
@@ -1,5 +1,5 @@
 @import '../../../../theme/theme-default.less';
-@customer-picker-prefix: ~'.customer-picker';
+@customer-picker-prefix: ~'.co-customer-picker';
 
 @{customer-picker-prefix} {
 }
