--- a/src/style/home.less
+++ b/src/style/home.less
@@ -13,7 +13,7 @@
     box-shadow: none;
   }
 
-  #nav.ant-menu-horizontal > .ant-menu-item-selected {
+  #nav.ant-menu-horizontal>.ant-menu-item-selected {
     border-top: none;
   }
 
@@ -23,6 +23,7 @@
     max-width: @index-home-max-width;
     margin: auto;
     padding: 0 24px;
+
     &-wrapper {
       position: relative;
       z-index: 1;
@@ -32,6 +33,7 @@
         'Microsoft YaHei', 'Helvetica Neue', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
       font-variant: tabular-nums;
     }
+
     h2 {
       padding: 80px 0 40px;
       color: @index-home-color;
@@ -52,21 +54,25 @@
     height: 520px;
     margin: auto;
     padding: 0 24px;
+
     &__slogan {
       width: 54%;
       min-width: 420px;
       max-width: 560px;
       min-height: 336px;
       color: #0d1a26;
+
       h1 {
         margin: 12px 0;
         font-size: 54px;
         font-family: 'Futura', 'Helvetica Neue For Number', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'PingFang SC',
           'Hiragino Sans GB', 'Microsoft YaHei', 'Helvetica Neue', Helvetica, Arial, sans-serif;
       }
+
       p {
         font-size: 20px;
       }
+
       .ant-btn {
         min-width: 110px;
         height: 40px;
@@ -74,16 +80,19 @@
         font-size: 16px;
         border-radius: 20px;
       }
+
       &-btn {
         display: flex;
         align-items: center;
         margin-top: 64px;
         line-height: 40px;
+
         .github {
           display: flex;
         }
       }
     }
+
     &__img {
       position: absolute;
       right: 0;
@@ -92,6 +101,7 @@
       max-width: 482px;
       height: 420px;
       overflow: hidden;
+
       img {
         height: 100%;
         border-radius: 8px;
@@ -103,6 +113,7 @@
     position: relative;
     padding-bottom: 80px;
     color: #fff;
+
     &__bg {
       position: absolute;
       top: 0;
@@ -112,6 +123,7 @@
       margin: 0;
       background: @index-home-bg;
       transform: skewY(-4.5deg);
+
       &-bottom {
         position: absolute;
         right: 0;
@@ -121,21 +133,26 @@
         background: @index-home-bg;
       }
     }
+
     h2,
     h3 {
       color: #fff;
     }
+
     h2 {
       padding-top: 100px;
     }
+
     h3 {
       font-size: 18px;
     }
+
     &__item {
       display: flex;
       height: 100px;
       margin-bottom: 56px;
     }
+
     .anticon {
       margin-right: 16px;
       padding-top: 8px;
@@ -147,6 +164,7 @@
     margin-bottom: 48px;
     overflow: hidden;
     background: #fff;
+
     &__item {
       display: block;
       margin-bottom: 32px;
@@ -156,6 +174,7 @@
       &:hover {
         color: @index-home-bg;
       }
+
       img {
         max-width: 80%;
       }
@@ -172,29 +191,34 @@
     #logo {
       padding-left: 0;
     }
+
     .page-banner {
       &__slogan {
         width: 100%;
         min-width: 100%;
         max-width: 100%;
         text-align: center;
+
         &-btn {
           flex-wrap: wrap;
           justify-content: center;
-          > a,
-          > github-button {
+
+          >a {
             margin-bottom: 16px;
           }
         }
       }
+
       &__img {
         display: none;
       }
     }
+
     .page-feature {
       &__item {
         flex-direction: column;
         text-align: center;
+
         .anticon {
           margin: 0 0 16px 0;
         }
