业务组件：箱选择器、数据字典选择器

--- a/packages/cbc/business/templates/picker-template.component.html
+++ b/packages/cbc/business/templates/picker-template.component.html
@@ -1,5 +1,5 @@
 <nz-select
-  nzServerSearch
+  [nzServerSearch]="nzServerSearch"
   nzShowSearch
   [nzMaxTagCount]="coMaxMultipleCount"
   [nzDropdownRender]="renderTemplate"
