fix:业务组件 币种选择器 mork数据  选择器模板增加可选择单选是否打开搜索

--- a/packages/cbc/business/templates/picker-template.component.html
+++ b/packages/cbc/business/templates/picker-template.component.html
@@ -1,4 +1,4 @@
-<nz-select nzServerSearch nzShowSearch [nzMaxTagCount]="coMaxMultipleCount" [nzDropdownRender]="renderTemplate"
+<nz-select nzServerSearch [nzShowSearch]="coShowSearch" [nzMaxTagCount]="coMaxMultipleCount" [nzDropdownRender]="renderTemplate"
   nzDropdownMatchSelectWidth="false" [nzNotFoundContent]="coNotFoundContent" [nzMaxTagPlaceholder]="tagPlaceHolder"
   [nzMode]="coMode" [nzOpen]="coOpen" [nzSize]="coSize" [nzAutoFocus]="coAutoFocus" [nzPlaceHolder]="coPlaceHolder"
   [nzAllowClear]="coAllowClear" [(ngModel)]="value" [nzFilterOption]="coFilterOption" (nzOnSearch)="onSearch($event)"
