fix:picker-template 模板更改

--- a/packages/cbc/business/templates/picker-template.component.html
+++ b/packages/cbc/business/templates/picker-template.component.html
@@ -1,6 +1,6 @@
 <nz-select
   [nzServerSearch]="nzServerSearch"
-  nzShowSearch
+  [nzShowSearch]="coShowSearch"
   [nzMaxTagCount]="coMaxMultipleCount"
   [nzDropdownRender]="renderTemplate"
   nzDropdownMatchSelectWidth="false"
