--- a/packages/cbc/index.less
+++ b/packages/cbc/index.less
@@ -2,8 +2,5 @@
 @import './basic/notice-icon/style/index.less';
 @import './basic/loading/style/index.less';
 
-@import './layout/full-content/style/index.less';
-@import './layout/page-header/style/index.less';
-@import './layout/reuse-tab/style/index.less';
-
 @import './business/style/index.less';
+@import './layout/style/index.less';
