--- a/packages/cbc/web/st/st.component.html
+++ b/packages/cbc/web/st/st.component.html
@@ -244,27 +244,44 @@
             (ngModelChange)="_checkSelection(i, $event)"
           ></label>
         </td>
-        <td *ngFor="let c of _columns; let cIdx = index" [nzLeft]="!!c._left" [nzRight]="!!c._right" [ngClass]="columnClass(c)" [attr.colspan]="c.colSpan">
+        <!-- 展示状态 -->
+        <td *ngFor="let c of _columns; let cIdx = index" [nzLeft]="!!c._left" [nzRight]="!!c._right"
+            [ngClass]="columnClass(c)" [attr.colspan]="c.colSpan">
           <span *ngIf="responsive" class="ant-table-rep__title">
-            <ng-template [ngTemplateOutlet]="titleTpl" [ngTemplateOutletContext]="{ $implicit: c.title }"></ng-template>
+            <ng-template [ngTemplateOutlet]="titleTpl"
+                         [ngTemplateOutletContext]="{ $implicit: c.title }"></ng-template>
           </span>
           <span>
-            <ng-template #render [ngTemplateOutlet]="c.__render" [ngTemplateOutletContext]="{ $implicit: i, index: index, column: c }"></ng-template>
+            <ng-template #render [ngTemplateOutlet]="c.__render"
+                         [ngTemplateOutletContext]="{ $implicit: i, index: index, column: c }"></ng-template>
             <ng-container *ngIf="!c.__render; else render">
-              <ng-container [ngSwitch]="c.type">
-                <label *ngSwitchCase="'radio'" nz-radio [nzDisabled]="i.disabled" [ngModel]="i.checked" (ngModelChange)="_refRadio($event, i)"></label>
+              <!-- 常规展示 -->
+              <ng-container [ngSwitch]="c.type" *ngIf="['no'].includes(c.type) || !i._editing || c.uneditable; else editing">
+                <label *ngSwitchCase="'radio'" nz-radio [nzDisabled]="i.disabled" [ngModel]="i.checked"
+                       (ngModelChange)="_refRadio($event, i)"></label>
                 <a *ngSwitchCase="'link'" (click)="_click($event, i, c)" [innerHTML]="i._values[cIdx]._text"></a>
                 <ng-container *ngIf="i._values[cIdx].text">
                   <nz-tag *ngSwitchCase="'tag'" [nzColor]="i._values[cIdx].color">
                     <span [innerHTML]="i._values[cIdx]._text"></span>
                   </nz-tag>
-                  <nz-badge *ngSwitchCase="'badge'" [nzStatus]="i._values[cIdx].color" [nzText]="i._values[cIdx].text"></nz-badge>
+                  <nz-badge *ngSwitchCase="'badge'" [nzStatus]="i._values[cIdx].color"
+                            [nzText]="i._values[cIdx].text"></nz-badge>
                 </ng-container>
                 <ng-template *ngSwitchCase="'widget'" st-widget-host [record]="i" [column]="c"></ng-template>
-                <span *ngSwitchDefault [innerHTML]="i._values[cIdx]._text" [attr.title]="isTruncate(c) ? i._values[cIdx].text : null"></span>
+                <span *ngSwitchDefault [innerHTML]="i._values[cIdx]._text"
+                      [attr.title]="isTruncate(c) ? i._values[cIdx].text : null"></span>
               </ng-container>
+              <!-- 编辑 -->
+              <ng-template #editing>
+                <!-- 这里和过滤器公用类型 -->
+                <ng-container [ngSwitch]="c.filterType" *ngIf="!['action'].includes(c.type)">
+                  <nz-date-picker *ngSwitchCase="'date'" [(ngModel)]="i._values[cIdx].value" class="width-100"></nz-date-picker>
+                  <input *ngSwitchDefault type="text" nz-input [(ngModel)]="i._values[cIdx].value">
+                </ng-container>
+              </ng-template>
               <ng-container *ngFor="let btn of _validBtns(c.buttons, i, c); let last = last">
-                <a *ngIf="btn.children.length > 0" nz-dropdown [nzDropdownMenu]="btnMenu" nzOverlayClassName="st__btn-sub">
+                <a *ngIf="btn.children.length > 0" nz-dropdown [nzDropdownMenu]="btnMenu"
+                   nzOverlayClassName="st__btn-sub">
                   <ng-container *ngIf="_btnText(i, btn); else ellipsisIcon">
                     <span [innerHTML]="_btnText(i, btn)"></span>
                     <i nz-icon nzType="down"></i>
@@ -276,15 +293,18 @@
                 <nz-dropdown-menu #btnMenu="nzDropdownMenu">
                   <ul nz-menu>
                     <ng-container *ngFor="let subBtn of _validBtns(btn.children, i, c)">
-                      <li *ngIf="subBtn.type !== 'divider'" nz-menu-item [class.st__btn-disabled]="subBtn._disabled">
-                        <ng-template [ngTemplateOutlet]="btnTpl" [ngTemplateOutletContext]="{ $implicit: i, btn: subBtn }"> </ng-template>
+                      <li *ngIf="subBtn.type !== 'divider'" nz-menu-item
+                          [class.st__btn-disabled]="subBtn._disabled">
+                        <ng-template [ngTemplateOutlet]="btnTpl"
+                                     [ngTemplateOutletContext]="{ $implicit: i, btn: subBtn }"></ng-template>
                       </li>
                       <li *ngIf="subBtn.type === 'divider'" nz-menu-divider></li>
                     </ng-container>
                   </ul>
                 </nz-dropdown-menu>
                 <span *ngIf="btn.children.length == 0" [class.st__btn-disabled]="btn._disabled">
-                  <ng-template [ngTemplateOutlet]="btnTpl" [ngTemplateOutletContext]="{ $implicit: i, btn: btn }"> </ng-template>
+                  <ng-template [ngTemplateOutlet]="btnTpl"
+                               [ngTemplateOutletContext]="{ $implicit: i, btn: btn }"></ng-template>
                 </span>
                 <nz-divider *ngIf="!last" nzType="vertical"></nz-divider>
               </ng-container>
