feat(cbc:se): se module

--- a/packages/cbc/index.less
+++ b/packages/cbc/index.less
@@ -1,6 +1,7 @@
 @import './basic/ellipsis/style/index.less';
 @import './basic/notice-icon/style/index.less';
 @import './basic/loading/style/index.less';
+@import './web/se/style/index';
 
 @import './business/style/index.less';
 @import './layout/style/index.less';
