--- a/packages/cbc/layout/search-area-layout/style/index.less
+++ b/packages/cbc/layout/search-area-layout/style/index.less
@@ -5,14 +5,29 @@
 @search-area-item-margin-right: 12px;
 
 @{search-area-prefix} {
-  &-layout {
+  &-layout, &-extra {
     position: relative;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    flex-grow: 1;
+    width: 100%;
+    max-width: 100%;
 
     &&__alignRight {
       justify-content: flex-end;
+    }
+
+    &&__alignCenter {
+      justify-content: center;
+    }
+  }
+
+  &-extra {
+    display: none;
+
+    &.show {
+      display: flex;
     }
   }
 
