feat(cbc): st auto calc [scroll]

--- a/packages/cbc/index.less
+++ b/packages/cbc/index.less
@@ -2,6 +2,7 @@
 @import './basic/notice-icon/style/index.less';
 @import './basic/loading/style/index.less';
 @import './web/se/style/index';
+@import './web/st/style/index';
 
 @import './business/style/index.less';
 @import './layout/style/index.less';
