--- a/packages/cbc/web/st/style/index.less
+++ b/packages/cbc/web/st/style/index.less
@@ -1,4 +1,4 @@
-@import '../../../theme/theme-default.less';
+@import '../../../../theme/theme-default.less';
 @st-prefix: ~'.st';
 
 @{st-prefix} {
