--- a/src/styles.less
+++ b/src/styles.less
@@ -18,3 +18,10 @@
 
 // 可以替换 dark, compact
 // @import '../packages/theme/theme-dark.less';
+html .ant-table-thead > tr > th {
+  overflow: hidden;
+   white-space: nowrap;
+  text-align: left;
+  background-color: #f5f5f5ff;
+  border: 0;
+}
