--- a/packages/cbc/business/report-viewer/report-viewer.component.html
+++ b/packages/cbc/business/report-viewer/report-viewer.component.html
@@ -1,6 +1,6 @@
 <div class="report-viewer-container">
-  <button [ngClass]="{'disabled': !preDisble}"  (click)="chooseReport(true)">&lt;</button>
+  <button [hidden]="isHide"  [ngClass]="{'disabled': !preDisble}"  (click)="chooseReport(true)">&lt;</button>
   <iframe #reportIframe src="" allowtransparency="true" frameborder="0" height="600px"></iframe>
-  <button [ngClass]="{'disabled': !nextDisble}"  (click)="chooseReport(false)">&gt;</button>
+  <button [hidden]="isHide" [ngClass]="{'disabled': !nextDisble}"  (click)="chooseReport(false)">&gt;</button>
 </div>
 
