feat(st): .st-row-red

--- a/packages/cbc/web/st/style/index.less
+++ b/packages/cbc/web/st/style/index.less
@@ -67,6 +67,9 @@
     &@{st-prefix}-row-odd {
       background:rgba(0,0,0,0.02);
     }
+    &@{st-prefix}-row-red {
+      background: #FFA39E;
+    }
 
     .@{ant-prefix}-table-wrapper:only-child {
       // 修复 https://github.com/ng-alain/ng-alain/issues/1619
