--- a/packages/cbc/web/st/st.component.html
+++ b/packages/cbc/web/st/st.component.html
@@ -236,7 +236,9 @@
                 </ng-container>
               </ng-template>
               <ng-container *ngFor="let btn of _validBtns(c.buttons, i, c); let last = last">
-                <a *ngIf="btn.children.length > 0" nz-dropdown [nzDropdownMenu]="btnMenu"
+                <a *ngIf="btn.children.length > 0"
+                   nz-dropdown [nzDropdownMenu]="btnMenu"
+                   [className]="btn._className || ''"
                    nzOverlayClassName="st__btn-sub">
                   <ng-container *ngIf="_btnText(i, btn); else ellipsisIcon">
                     <span [innerHTML]="_btnText(i, btn)"></span>
@@ -258,7 +260,9 @@
                     </ng-container>
                   </ul>
                 </nz-dropdown-menu>
-                <span *ngIf="btn.children.length == 0" [class.st__btn-disabled]="btn._disabled">
+                <span *ngIf="btn.children.length == 0"
+                      [className]="btn._className || ''"
+                      [class.st__btn-disabled]="btn._disabled">
                   <ng-template [ngTemplateOutlet]="btnTpl"
                                [ngTemplateOutletContext]="{ $implicit: i, btn: btn }"></ng-template>
                 </span>
