--- a/packages/cbc/web/st/style/index.less
+++ b/packages/cbc/web/st/style/index.less
@@ -73,6 +73,10 @@
     &@{st-prefix}-row-red {
       background: #FFA39E;
     }
+    &@{st-prefix}-row-line-through {
+      color: rgba(0, 0, 0, 0.25);
+      text-decoration: line-through;
+    }
 
     .@{ant-prefix}-table-wrapper:only-child {
       // 修复 https://github.com/ng-alain/ng-alain/issues/1619
