refactor(cbc): st hide column setting

--- a/packages/cbc/web/st/st.component.html
+++ b/packages/cbc/web/st/st.component.html
@@ -130,9 +130,9 @@
             <ng-container *ngSwitchCase="'action'">
               <div class="d-flex justify-content-between">
                 <span>{{ 'Action' | translate }}</span>
-                <div>
+                <!--<div>
                   <i nz-icon nzType="setting" nzTheme="outline"></i>
-                </div>
+                </div>-->
               </div>
             </ng-container>
             <ng-container *ngSwitchDefault>
