fix(cbc): st line through class

--- a/packages/cbc/web/st/style/index.less
+++ b/packages/cbc/web/st/style/index.less
@@ -73,7 +73,7 @@
     &@{st-prefix}-row-red {
       background: #FFA39E;
     }
-    &@{st-prefix}-row-line-through {
+    &@{st-prefix}-row-line-through td:not(.no-line-through) {
       color: rgba(0, 0, 0, 0.25);
       text-decoration: line-through;
     }
