feat(cbc): add st bordered, row selected style

--- a/packages/cbc/web/st/st.component.html
+++ b/packages/cbc/web/st/st.component.html
@@ -65,7 +65,6 @@
   [nzTotal]="total"
   [nzShowPagination]="_isPagination"
   [nzFrontPagination]="false"
-  [nzBordered]="bordered"
   [nzSize]="size"
   [nzLoading]="_loading"
   [nzLoadingDelay]="loadingDelay"
@@ -183,7 +182,11 @@
       <ng-template [ngTemplateOutlet]="bodyHeader" [ngTemplateOutletContext]="{ $implicit: _statistical }"></ng-template>
     </ng-container>
     <ng-template #bodyTpl let-i let-index="index">
-      <tr [attr.data-index]="index" (click)="_rowClick($event, i, index)" [class.st-row-odd]="index % 2 === 1" [ngClass]="i._rowClassName">
+      <tr [attr.data-index]="index"
+          (click)="_rowClick($event, i, index)"
+          [class.st-row-odd]="index % 2 === 1"
+          [class.st-row-selected]="i.checked"
+          [ngClass]="i._rowClassName">
         <td *ngIf="showCheckbox">
           <label
             nz-checkbox
