feat(cbc): st nested st inside expand row

--- a/packages/cbc/web/st/st.component.html
+++ b/packages/cbc/web/st/st.component.html
@@ -196,7 +196,7 @@
             nz-checkbox
             [nzDisabled]="i.disabled"
             [ngModel]="i.checked"
-            (ngModelChange)="_checkSelection(i, $event)"
+            (ngModelChange)="_checkSelection(i, $event, index)"
           ></label>
         </td>
         <td
