--- a/packages/cbc/web/st/st.component.html
+++ b/packages/cbc/web/st/st.component.html
@@ -67,10 +67,10 @@
   [(nzPageSize)]="ps"
   (nzPageSizeChange)="_change('ps')"
   [nzTotal]="total"
-  [nzShowPagination]="_isPagination"
+  [nzShowPagination]="loadOnScroll ? false : _isPagination"
   [nzFrontPagination]="false"
   [nzSize]="size"
-  [nzLoading]="_loading"
+  [nzLoading]="showLoading('nz-table') || (loadOnScroll && !_data?.length)"
   [nzLoadingDelay]="loadingDelay"
   [nzLoadingIndicator]="loadingIndicator"
   [nzTitle]="header"
@@ -182,7 +182,7 @@
     </tr>
   </thead>
   <tbody class="st__body">
-    <ng-container *ngIf="!_loading">
+    <ng-container *ngIf="!showLoading()">
       <ng-template [ngTemplateOutlet]="bodyHeader" [ngTemplateOutletContext]="{ $implicit: _statistical }"></ng-template>
     </ng-container>
     <ng-template #bodyTpl let-i let-index="index">
@@ -288,6 +288,11 @@
       <tr [nzExpand]="i.expand">
         <ng-template [ngTemplateOutlet]="expand" [ngTemplateOutletContext]="{ $implicit: i, index: index }"></ng-template>
       </tr>
+      <tr *ngIf="showLoading('load-on-scroll') && index === _data?.length - 1">
+        <div style="position: sticky;left: 50%;height: 40px;display:flex;align-items:center;">
+          <nz-spin></nz-spin>
+        </div>
+      </tr>
     </ng-template>
     <ng-container *ngIf="!virtualScroll">
       <ng-container *ngFor="let i of _data; let index = index">
@@ -299,7 +304,7 @@
         <ng-template [ngTemplateOutlet]="bodyTpl" [ngTemplateOutletContext]="{ $implicit: i, index: index }"> </ng-template>
       </ng-template>
     </ng-container>
-    <ng-container *ngIf="!_loading">
+    <ng-container *ngIf="!showLoading()">
       <ng-template [ngTemplateOutlet]="body" [ngTemplateOutletContext]="{ $implicit: _statistical }"></ng-template>
     </ng-container>
   </tbody>
